fixing spacing on smaller screen

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -10,3 +10,8 @@
         }
     }
 }
+@media only screen and (max-width: 409px) {
+    .dashboard{
+        padding: 0px 4%;
+    }
+}
